2000-07-06  Chema Celorio  <chema@celorio.com>

	* view.c (doc_insert_text_real_cb): new function to fix #16374. We cant assume that
	a parameter that is not passed to a funciton will be TRUE.

	* document.c (gedit_document_insert_text): call doc_insert_text_real_cb

	same for the _delete_ function

2000-07-05  Chema Celorio  <chema@celorio.com>

	* search.c (file_info_cb): added total size to the dialog

2000-07-05  Chema Celorio  <chema@celorio.com>

	* search.c (file_info_cb): kill compile warning

	* view.c (gedit_view_init): fix the code a bit

2000-07-05  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_init): try to fix the speed problems with sucky
	themes. I think they are gone, but we need to verify it.

2000-07-02    <phoenix@nova.es>

	* search.c (count_lines_cb): This function is reform . add file_info ()
	* search.c (file_info): Add new function . Return -> total chars , total
	words , total lines , total paragraphs ....

2000-07-01  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_view_menu_sensitivity): set the sensitivity
	of the revert menu item

	* view.c (gedit_view_changed_cb): set sentivity of the add/remove view
	menu

	* dialogs/dialog-prefs.c (apply_cb): we where not setting tab_pos.
	set tab pos after apply.

2000-06-30    <chema@celorio.com>

	* plugin.h (struct _PluginData): add long_desc

	* dialogs/dialog-plugins.c: 
	(gedit_plugin_manager_item_clicked): use pd->long_desc v.s. pd->desc

2000-06-30    <chema@celorio.com>

	* dialogs/dialog-plugins.c: find a work arround for the crash.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_set_title): fix leak.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-plugins.c: remove g_print's

	* document.c: Do not free docname. back Charles commit.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_add_cb): call set_view_menu_sensitivity after adding a view