@@ -8,6 +8,7 @@ gedit 0.9.1
     #name directive. like "prefs.html#printing"
 [ ] Add "Documents can have multiple views [ ]" in the prefs box
     and set this OFF by default. Multiple views confuse newbie users
+[ ] Add a convert tabs to space feature
 
 ** Roberto **
 
@@ -111,6 +112,9 @@ gedit 0.9.1
 [X] Add to the diff plugin the ability to make the diff from
     an open document in gedit.
 [X] Fix the speed problems with poorly written themes
+[X] Fix the "abccba" problem in non Linux Systems
+[X] Fix the Print Selection problem so that we can release
+without gnome-print 0.21
 
 ** Eric **
 [X] New Documentation
