@@ -335,12 +335,12 @@ gedit_plugin_load (const gchar *file)
 	}
 	if (pd->desc == NULL)
 	{
-		g_warning (_("Error, the plugin did not specified a description"));
+		g_warning ("Error, the plugin did not specified a description" );
 		goto error;
 	}
 	if (pd->long_desc == NULL)
 	{
-		g_warning (_("Error, the plugin did not specified a long description"));
+		g_warning ("Error, the plugin did not specified a long description" );
 		goto error;
 	}
 
