@@ -1,3 +1,7 @@
+2000-07-07  Chema Celorio  <chema@celorio.com>
+
+	* es.po: Update Spanish Translation
+
 2000-07-04  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian translation.
