@@ -1,3 +1,8 @@
+2000-07-07  Chema Celorio  <chema@celorio.com>
+
+	* plugin.c (gedit_plugin_load): do not "_(" mark warning messages for
+	translation
+
 2000-07-06  Chema Celorio  <chema@celorio.com>
 
 	* view.c (doc_insert_text_real_cb): new function to fix #16374. We cant assume that
